[project]
name = "myccc"
version = "0.3.0"
description = ""
authors = [
    { name = "tct123", email = "42028373+tct123@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests"]

[tool.poetry]
packages = [{ include = "myccc", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
